--- a/_data/profile.yml
+++ b/_data/profile.yml
@@ -1,61 +1,69 @@
-primary_name: "Your Name"
+primary_name: "Yu Feng"
 secondary_name: ""
-navbar_name: "Your Name"
+navbar_name: "Yu Feng"
 
 positions:
-- logo: /assets/images/badges/MIT_Social_circle.png  # Logo is optional
-  name: Position 1 with logo
-- name: Position 2 without logo
+#- logo: /assets/images/badges/MIT_Social_circle.png  # Logo is optional
+#  name: Position 1 with logo
+#- name: Position 2 without logo
 
 
-email: "your@email.com"
+email: "yfen0146@uni.sydney.edu.au"
 # cv_link: link-to-your-cv-file
-gscholar: xFmQpf4AAAAJ  # This is an example, replace it with your own Google Scholar ID
-github: your_github_id
-twitter: your_twitter_id  # Do not include the '@' symbol
+gscholar: https://scholar.google.com/citations?user=5VlLio4AAAAJ&hl=en  # This is an example, replace it with your own Google Scholar ID
+github: https://github.com/HazardFY/
+# twitter: your_twitter_id  # Do not include the '@' symbol
 # wechat_qrcode: /assets/images/etc/wechat.jpg
 # wechat_prompt: >-
 #   Please tell me your <strong>name</strong> and <strong>affiliation</strong> (current or past) when adding my wechat. Thanks!
-# linkedin: your-linked-in-id
-# orcid: 0000-0000-0000-0000
+orcid: 0000-0002-6747-605X
+linkedin: https://www.linkedin.com/in/yu-feng-272b602b2/
+ 
 
 short_bio_text_justify: false
 short_bio: >-
   <p>
-    A <a href="https://en.wikipedia.org/wiki/Bicolor_cat" target="_blank">bicolor cat</a> is a cat with white fur combined with fur of some other colour, for example solid black, tabby, or colourpointed.
+    I am currently a second-year Ph.D. student in the School of Computer Science, The University of Sydney, 
+    under the supervision of Prof. <a href="https://scholar.google.com/citations?user=N8qTc2AAAAAJ&hl=en" target="_blank">bicolor WeidongCai</a>.
+    Before that, I received my M.E. and B.E. degrees in the School of Computer Science and Engineering, Northwestern Polytechnical University (NPU) in 2023 and 2020 respectively, 
+    advised by Prof. Yong Xia.
   </p>
   <p>
-    There are various patterns of a bicolour cat. These range from the Van-patterned (colour on the crown of the head 
-    and the tail only) to a solid colour with a throat locket or medallion. Bicolour coats are found in many cat breeds, 
-    as well as being common in domestic longhair and domestic shorthair cats.
+    My research interests include backdoor attacks and medical image analysis. Recently, I'm focusing on the security and medical applications of 3D point cloud data.
   </p>
 
-portrait_url: /assets/images/photos/portrait.jpg
-portrait_caption: >-
-  Photo by Manja Vitolic on Unsplash (this caption is optional, comment it out to disable).
+portrait_url: /assets/images/photos/Yu_Feng.png
+# portrait_caption: >-
+#  Photo by Manja Vitolic on Unsplash (this caption is optional, comment it out to disable).
 
-education:
-- name: Massachusetts Institute of Technology
-  logo: /assets/images/badges/MIT_Social_circle.png
+Education:
+- name: The University of Sydney
+  logo: /assets/images/badges/SYD_logo.png
   position: >- 
-    Department of Electrical Engineering and Computer Science <br/>
-    Ph.D. Student
-  date: Sep. 2024 - present
-- name: Peking University
-  logo: /assets/images/badges/PKU_red.png
-  position: B.S. in Computer Science
-  date: Sep. 2019 - Jul. 2021
+    School of Computer Science <br/>
+    Ph.D. candidate
+  date: January. 2024 - present
+- name: Northwestern Polytechnical University
+  logo: /assets/images/badges/NPU_logo.png
+  position: M.E. in Computer Science
+  date: Sep. 2020 - Apr. 2023
+- name: Northwestern Polytechnical University
+  logo: /assets/images/badges/NPU_logo.png
+  position: B.E. in Computer Science
+  date: Sep. 2016 - Jul. 2020
 
-# experience:
-# - name: Peking University
-#   logo: /assets/images/badges/PKU_red.png
-#   position: Research Intern
-#   date: Sep. 2019 - Jul. 2021
+ Working Experience:
+ - name: JD Explore Academy
+   logo: /assets/images/badges/JD_logo.png
+   position: Algorithm Intern
+   date: Jul. 2021 - Dec. 2021
 
 awards:
-- name: Award Name 2
+- name: USYD-CSC Postgraduate Research Scholarship
   date: 2024
-- name: Award Name 1 
-  date: 2021
-- name: A quick brown fox jumps over the lazy dog and runs away award
+- name: Excellent Master's Thesis
+  date: 2023
+- name: Outstanding Graduate of NPU
+  date: 2023
+- name: Social Activity Scholarship of NPU
   date: 2021
