--- a/_data/profile.yml
+++ b/_data/profile.yml
@@ -3,8 +3,8 @@ secondary_name: ""
 navbar_name: "Yu Feng"
 
 positions:
-#- logo: /assets/images/badges/MIT_Social_circle.png  # Logo is optional
-#  name: Position 1 with logo
+- logo: /assets/images/badges/SYD_logo.png  # Logo is optional
+  name: Ph.D. candidate
 #- name: Position 2 without logo
 
 
