--- a/_data/profile.yml
+++ b/_data/profile.yml
@@ -58,7 +58,7 @@ Working Experience:
    position: Algorithm Intern
    date: Jul. 2021 - Dec. 2021
 
-awards:
+Awards:
 - name: USYD-CSC Postgraduate Research Scholarship
   date: 2024
 - name: Excellent Master's Thesis
