--- a/_data/profile.yml
+++ b/_data/profile.yml
@@ -24,7 +24,7 @@ short_bio_text_justify: false
 short_bio: >-
   <p>
     I am currently a second-year Ph.D. student in the School of Computer Science, The University of Sydney, 
-    under the supervision of Prof. <a href="https://scholar.google.com/citations?user=N8qTc2AAAAAJ&hl=en" target="_blank">bicolor WeidongCai</a>.
+    under the supervision of Prof. <a href="https://scholar.google.com/citations?user=N8qTc2AAAAAJ&hl=en" target="_blank">WeidongCai</a>.
     Before that, I received my M.E. and B.E. degrees in the School of Computer Science and Engineering, Northwestern Polytechnical University (NPU) in 2023 and 2020 respectively, 
     advised by Prof. Yong Xia.
   </p>
