--- a/_data/profile.yml
+++ b/_data/profile.yml
@@ -11,13 +11,13 @@ positions:
 email: "yfen0146@uni.sydney.edu.au"
 # cv_link: link-to-your-cv-file
 gscholar: https://scholar.google.com/citations?user=5VlLio4AAAAJ&hl=en  # This is an example, replace it with your own Google Scholar ID
-github: https://github.com/HazardFY/
+github: HazardFY
 # twitter: your_twitter_id  # Do not include the '@' symbol
 # wechat_qrcode: /assets/images/etc/wechat.jpg
 # wechat_prompt: >-
 #   Please tell me your <strong>name</strong> and <strong>affiliation</strong> (current or past) when adding my wechat. Thanks!
 orcid: 0000-0002-6747-605X
-linkedin: https://www.linkedin.com/in/yu-feng-272b602b2/
+linkedin: yu-feng-272b602b2/
  
 
 short_bio_text_justify: false
